--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-dearpygui==1.9.1
-numpy==1.23.4
-Pillow==10.3.0
-pre-commit==3.3.3
-pyparsing==3.1.2
-sounddevice==0.4.6
-soundfile==0.12.1
+dearpygui
+numpy
+Pillow
+pre-commit
+pyparsing
+sounddevice
+soundfile
