themes and webms

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,8 +2,9 @@ dearpygui
 numpy
 Pillow
 pre-commit
+pydata-sphinx-theme
 pyparsing
 sounddevice
 soundfile
 sphinx-autoapi
-sphinx-rtd-theme
+sphinxcontrib-video
