--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,25 @@
-dearpygui
-numpy
-Pillow
-pre-commit
-pyparsing
-screeninfo
-sounddevice
-soundfile
+cffi==1.17.1
+cfgv==3.4.0
+cx_Freeze==8.5.3
+dearpygui==2.1.0
+distlib==0.4.0
+filelock==3.20.3
+freeze-core==0.5.0
+identify==2.6.13
+nodeenv==1.9.1
+numpy==2.2.6
+opencv-python==4.12.0.88
+packaging==25.0
+patchelf==0.17.2.4
+pillow==11.3.0
+platformdirs==4.3.8
+pre_commit==4.3.0
+pycparser==2.22
+pyparsing==3.2.3
+pywinstyles==1.8
+PyYAML==6.0.2
+screeninfo==0.8.1
+setuptools==80.9.0
+sounddevice==0.5.2
+soundfile==0.13.1
+virtualenv==20.34.0
