--- a/imgui.ini
+++ b/imgui.ini
@@ -3,10 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=617,20
+Pos=558,20
 Size=550,680
 
 [Window][./test/]
-Pos=59,16
-Size=681,556
+Pos=150,51
+Size=741,555
+
+[Window][Dear ImGui Style Editor]
+Pos=97,147
+Size=405,683
 
