--- a/imgui.ini
+++ b/imgui.ini
@@ -3,14 +3,22 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=198,49
-Size=550,680
+Pos=69,70
+Size=462,336
 
 [Window][./test/]
-Pos=57,170
-Size=741,555
+Pos=386,-7
+Size=736,555
 
 [Window][Dear ImGui Style Editor]
 Pos=97,147
 Size=405,683
+
+[Window][Loaded Mess List]
+Pos=27,316
+Size=791,529
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=59,149
+Size=538,481
 
