--- a/imgui.ini
+++ b/imgui.ini
@@ -3,11 +3,11 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=69,70
+Pos=-7,91
 Size=462,336
 
 [Window][./test/]
-Pos=386,-7
+Pos=14,151
 Size=736,555
 
 [Window][Dear ImGui Style Editor]
@@ -15,10 +15,14 @@ Pos=97,147
 Size=405,683
 
 [Window][Loaded Mess List]
-Pos=27,316
-Size=791,529
+Pos=-22,26
+Size=579,575
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=59,149
 Size=538,481
+
+[Window][Search Window]
+Pos=42,80
+Size=575,522
 
